Now I've fixed the stupid text clipping issue!

--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,10 @@ p {
     background-position: center;
     background-repeat: no-repeat;
 }
-#home .bgimg.replace {
-
-}
-
 .landing-text {
     display: table-cell;
     text-align: left;
     vertical-align: middle;
-    width: 100%;
     padding: 0px 10%;
     margin: 0px auto;
     text-shadow: 2px 2px 12px #1e1e22;
@@ -72,8 +67,8 @@ p {
 .landing-text h1 {
     font-family: 'Poppins', sans-serif;
     color: #F1F1F7;
-    font-size: 300%;
-    font-weight: 500;
+    font-size: 200%;
+    font-weight: 400;
 }
 .landing-text h3 {
     font-family: 'Poppins', sans-serif;
